src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/GL21_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/GL21_StringErrorContext.class */
public final class GL21_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglUniformMatrix2x3fv(IIZJ)V", "net/labymod/core/laby3d/opengl/error/generated/GL21ErrorContext");
        methods.put("glUniformMatrix2x3fv(IZLjava/nio/FloatBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/GL21ErrorContext");
        methods.put("nglUniformMatrix3x2fv(IIZJ)V", "net/labymod/core/laby3d/opengl/error/generated/GL21ErrorContext");
        methods.put("glUniformMatrix3x2fv(IZLjava/nio/FloatBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/GL21ErrorContext");
        methods.put("nglUniformMatrix2x4fv(IIZJ)V", "net/labymod/core/laby3d/opengl/error/generated/GL21ErrorContext");
        methods.put("glUniformMatrix2x4fv(IZLjava/nio/FloatBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/GL21ErrorContext");
        methods.put("nglUniformMatrix4x2fv(IIZJ)V", "net/labymod/core/laby3d/opengl/error/generated/GL21ErrorContext");
        methods.put("glUniformMatrix4x2fv(IZLjava/nio/FloatBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/GL21ErrorContext");
        methods.put("nglUniformMatrix3x4fv(IIZJ)V", "net/labymod/core/laby3d/opengl/error/generated/GL21ErrorContext");
        methods.put("glUniformMatrix3x4fv(IZLjava/nio/FloatBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/GL21ErrorContext");
        methods.put("nglUniformMatrix4x3fv(IIZJ)V", "net/labymod/core/laby3d/opengl/error/generated/GL21ErrorContext");
        methods.put("glUniformMatrix4x3fv(IZLjava/nio/FloatBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/GL21ErrorContext");
        methods.put("glUniformMatrix2x3fv(IZ[F)V", "net/labymod/core/laby3d/opengl/error/generated/GL21ErrorContext");
        methods.put("glUniformMatrix3x2fv(IZ[F)V", "net/labymod/core/laby3d/opengl/error/generated/GL21ErrorContext");
        methods.put("glUniformMatrix2x4fv(IZ[F)V", "net/labymod/core/laby3d/opengl/error/generated/GL21ErrorContext");
        methods.put("glUniformMatrix4x2fv(IZ[F)V", "net/labymod/core/laby3d/opengl/error/generated/GL21ErrorContext");
        methods.put("glUniformMatrix3x4fv(IZ[F)V", "net/labymod/core/laby3d/opengl/error/generated/GL21ErrorContext");
        methods.put("glUniformMatrix4x3fv(IZ[F)V", "net/labymod/core/laby3d/opengl/error/generated/GL21ErrorContext");
        return methods;
    }
}
